<resources>
    <string name="app_name">HNReceipt</string>
    <string name="create_do">Delivery Order</string>
    <string name="pilih_lahan_panen">Pilih Lahan Panen</string>
    <string name="tambah_lahan_panen">Tambah Lahan Panen</string>
    <string name="berat_total">Berat Total</string>
    <string name="berat_total_default">0 KG</string>
    <string name="no_lahan_panen_message">Belum ada lahan panen. Pilih tombol\ntambahkan lahan panen</string>
    <string name="berat_bersih">Berat Kotor</string>
    <string name="berat_brondol">Berat Brondol</string>
    <string name="kehadiran">Kehadiran</string>
    <string name="tambah">Tambah</string>
    <string name="nama_karyawan">Nama Karyawan</string>
    <string name="tanggal">Tanggal</string>
    <string name="tutup">Tutup</string>
    <string name="jumlah_hadir_default">0 Hadir</string>
    <string name="lahan">Lahan</string>
    <string name="buat_do">Delivery Order</string>
    <string name="daftar_do">Riwayat Delivery Order</string>
    <string name="no_do_message">Belum ada Delivery Order</string>
    <string name="cetak_do">Cetak Delivery Order</string>
    <string name="cetak_do_message_confirmation">Apakah anda yakin ingin mencetak DO ini? Setelah mencetak, anda tidak dapat mengubah nya!</string>
    <string name="ya">Ya</string>
    <string name="batal">Batal</string>
    <string name="in_percent">Dalam Persen</string>
    <string name="refaksi">Refaksi</string>
    <string name="default_refaksi">4</string>
    <string name="harga_sawit">Harga Sawit</string>
    <string name="upah_karyawan">Upah Karyawan</string>
    <string name="upah_sopir">Upah Sopir</string>
    <string name="upah_brondol">Upah Brondol</string>
    <string name="karyawan_sopir">Karyawan Sopir</string>
    <string name="ya_caps">YA</string>
    <string name="batal_caps">BATAL</string>
    <string name="default_harga_sawit">1850</string>
    <string name="per_kg">Per Kilogram</string>
    <string name="default_upah_karyawan">180</string>
    <string name="default_upah_brondol">150</string>
    <string name="default_upah_sopir">25</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="more">More</string>
    <string name="remove">Hapus</string>
    <string name="do_more_details">Delivery Order More Details</string>
    <string name="hapus_panen_lahan">Hapus Lahan Panen</string>
    <string name="hapus_item_message_confirmation">Apakah anda yakin ingin menghapus?</string>
    <string name="uncomplete_do">Cetak Delivery Order Gagal</string>
    <string name="uncomplete_do_alert_message">Anda belum melengkapi keterangan Delivery Order</string>
    <string name="hint_refaksi">Persen dari berat total</string>
    <string name="hint_upah_sopir">Persen dari harga omzet</string>
    <string name="upah_pemanen">Pemanen</string>
    <string name="upah_pemanen_pengangkut">Upah Pemanen %n Pengangkut</string>
    <string name="upah_pengangkut">Upah Pengangkut</string>
    <string name="harga_bersih">Harga Bersih</string>
    <string name="nol_rupiah">Rp 0,-</string>
    <string name="gaji_karyawan">Gaji Karyawan</string>
    <string name="nama">Nama</string>
    <string name="gaji">Gaji</string>
    <string name="total">Total</string>
    <string name="summary_d_o">Delivery Order (Summary)</string>
    <string name="harga_omzet">Harga Omzet</string>
    <string name="berat_total_kotor">Berat Total Kotor</string>
    <string name="nol_kilogram">0 Kg</string>
    <string name="nol_persen">0 %</string>
    <string name="berat_total_bersih">Berat Total Bersih</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mohon_tunggu">Mohon Tunggu</string>
    <string name="wrong_email_or_password">Password atau Email Salah</string>
    <string name="login_berhasil">Login Berhasil</string>
    <string name="daftar_karyawan">Daftar Karyawan</string>
    <string name="sinkronkan">Sinkronkan</string>
    <string name="tambah_karyawan">Tambah Karyawan</string>
    <string name="tidak_boleh_kosong">Tidak boleh kosong</string>
    <string name="unvalid_email">Email tidak valid</string>
    <string name="karyawan_ditambah">Karyawan Ditambah</string>
    <string name="hapus_karyawan">Hapus Karyawan</string>
    <string name="tambah_lahan">Tambah Lahan</string>
    <string name="daftar_lahan">Daftar Lahan</string>
    <string name="lahan_ditambah">Lahan Ditambah</string>
    <string name="nama_lahan">Nama Lahan</string>
    <string name="lahan_ini_tidak_lagi_tersedia">Lahan ini tidak lagi tersedia</string>
    <string name="pilih_lahan">Pilih Lahan</string>
    <string name="beratRefaksi">Berat Refaksi</string>
    <string name="unavailable">-</string>
</resources>